# Kiana-RAG

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/kianarag/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  matrix.cpp
app/src/main/java/com/example/kianarag/: AppModule.kt  KianaRAG.kt  KianaRAGApplication.kt  MainActivity.kt
app/src/main/java/com/example/kianarag/data/: Chunk.kt  CodebooksManager.kt  Document.kt  DocumentManager.kt  Embedding.kt  FileMetadata.kt  MetadataManager.kt  ObjectBoxAdapter.kt  PdfLoader.kt  Point.kt
app/src/main/java/com/example/kianarag/di/: di.kt
app/src/main/java/com/example/kianarag/graph/: Graph.kt  GraphNode.kt  GraphPoint.kt  HubNSWGraph.kt  NodeDocumentMetaData.kt  NodeMetaData.kt  NormalGraphNode.kt
app/src/main/java/com/example/kianarag/ml/: PrincipalComponentAnalysis.kt
app/src/main/java/com/example/kianarag/presentation/: ChatViewModel.kt  Destination.kt
app/src/main/java/com/example/kianarag/rag/: EmbeddingModel.kt  KianaRAG.kt  ObjectBoxSemanticMemory.kt  RagPipeline.kt  Splitter.kt  Tokenizer.kt
app/src/main/java/com/example/kianarag/util/: EmbeddingModel.kt  FloatArrayExt.kt  PCA.kt  PdfLoader.kt  PrincipalComponentAnalysis.kt  ProductQuantization.kt  checkDataSetSanity.kt  distance.kt  productQuantization.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/kianarag/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+32 files in other folders)
